Added WIP code for trigger volume box checking

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -160,16 +160,10 @@ LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/Cube.Cube
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
-WindowSize=X=1273.333 Y=665.333
+WindowSize=X=1273.000 Y=665.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -186,7 +180,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
+UNR=C:/Users/DELL/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
 BRUSH=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBX=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBXAnim=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
@@ -1038,20 +1032,20 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem1=/Game/PuzzleBP/Blueprints/Cube
-MRUItem2=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem3=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem5=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem6=/Game/Audio/SwitchButtonSounds/switch1to38
-MRUItem7=/Game/Audio/Click12345/SFX_ButtonClick
-MRUItem8=/Game/Audio/Beep_Buttons/SFX_Beep_Buttons
-MRUItem9=/Game/PuzzleBP/Blueprints/ColourChanger1
-MRUItem10=/Game/PuzzleBP/Blueprints/ColourChanger0
-MRUItem11=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem12=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem13=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
+MRUItem0=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem1=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
+MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem3=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem4=/Game/PuzzleBP/Blueprints/Cube
+MRUItem5=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem6=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem7=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem8=/Game/Audio/SwitchButtonSounds/switch1to38
+MRUItem9=/Game/Audio/Click12345/SFX_ButtonClick
+MRUItem10=/Game/Audio/Beep_Buttons/SFX_Beep_Buttons
+MRUItem11=/Game/PuzzleBP/Blueprints/ColourChanger1
+MRUItem12=/Game/PuzzleBP/Blueprints/ColourChanger0
+MRUItem13=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
 MRUItem14=/Game/PuzzleBP/Blueprints/BoxMovement/Box_Brush_Movement
 MRUItem15=/Game/PuzzleBP/Blueprints/ConveyorBelt
 MRUItem16=/Game/Geometry/Meshes/CubeMaterial
@@ -1980,7 +1974,7 @@ ChildActorComponent.Rendering=True
 ChildActorComponent.Tags=True
 ChildActorComponent.Cooking=True
 ControlPanel_C.Tick=True
-ControlPanel_C.Pawn=True
+ControlPanel_C.Pawn=False
 ControlPanel_C.Camera=True
 ControlPanel_C.Replication=True
 ControlPanel_C.Rendering=True
@@ -2443,6 +2437,7 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/Audio/SwitchButtonSounds/switch1to38.switch1to38=1
 /Game/Audio/Beep_Buttons/SFX_Beep_Buttons.SFX_Beep_Buttons=1
 /Game/Audio/Click12345/SFX_ButtonClick.SFX_ButtonClick=1
+/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint.IORail2_IOconnectCylinders_001_Blueprint=1
 
 [PlacementMode]
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/Box_Bp.Box_Bp;
@@ -2481,7 +2476,7 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Tags.ComponentTags\" "
-MeshComponent="\"Object.Tags.ComponentTags\" "
+MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
@@ -2524,23 +2519,23 @@ ControlPanel_C=
 Pawn=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshActor=
-GameEnvironment_C="\"Object.PuzzleSolution\" "
-LevelScriptActor="\"Object.PuzzleSolution\" "
+GameEnvironment_C="\"Object.LoopCounter\" "
+LevelScriptActor="\"Object.LoopCounter\" "
 Cube_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.CustomPrimitiveData\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" "
 StaticMeshSocket="\"Object.RelativeLocation\" "
 Box_Bp_C=
-StaticMeshComponent="\"Object.Tags.ComponentTags\" "
+StaticMeshComponent=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
 OutputDisplay_C=
 ALAN_C="\"Object.CommandsExecuted\" "
 ConveyorBelt_C=
-Cube_C="\"Object.colour\" "
+Cube_C=
 TextRenderComponent="\"Object.Tags.ComponentTags\" "
-IORail2_IOconnectCylinders_001_Blueprint_C=
+IORail2_IOconnectCylinders_001_Blueprint_C="\"Object.StaticMeshComponent\" "
 IORail2_IOconnectBox_001_Blueprint_C=
 BoxSpawner_C="\"Object.BoxColours\" "
-BoxChecker_C="\"Object.BoxColours\" "
+BoxChecker_C=
 
 [MaterialEditor]
 PrimType=2
@@ -2711,7 +2706,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
@@ -2770,11 +2765,11 @@ PreserveScaleRatio=False
 SkeletalMeshComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=
-StaticMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+StaticMeshComponent=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 ControlPanel_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-OutputDisplay_C=
+OutputDisplay_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 ALAN_C=
 BrushComponent=
@@ -2857,11 +2852,11 @@ Brush=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.Constrai
 TextRenderComponent=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 TriggerVolume=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-GameEnvironment_C=
+GameEnvironment_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 StaticMeshSocket=
 Cube_Blueprint_C=
-Box_Bp_C=
-Cube_C=
+Box_Bp_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+Cube_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 ConveyorBelt_C=
 BillboardComponent=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 ColourChanger0_C=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
@@ -2875,7 +2870,8 @@ BoxComponent=
 IORail2_IOconnectCylinders_001_Blueprint_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 IORail2_IOconnectBox_001_Blueprint_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 BoxSpawner_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-BoxChecker_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+BoxChecker_C=
+sprayTestBP_C=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
