Fixed bug with data parsing
Fixed bug which incorrectly parsed the solution data from the Output Display, added functionality to the Trigger Volume to set the box spawner to create the next set of boxes

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -159,7 +159,11 @@ ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker
+OpenAssetsAtExit=/Game/PuzzleBP/Maps/GameEnvironment.GameEnvironment:PersistentLevel.GameEnvironment
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
@@ -1032,12 +1036,12 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem1=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
+MRUItem0=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem1=/Game/PuzzleBP/Blueprints/BoxChecker
 MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem3=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem4=/Game/PuzzleBP/Blueprints/Cube
-MRUItem5=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem3=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
+MRUItem5=/Game/PuzzleBP/Blueprints/Cube
 MRUItem6=/Game/PuzzleBP/Blueprints/ALAN
 MRUItem7=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
 MRUItem8=/Game/Audio/SwitchButtonSounds/switch1to38
@@ -2285,6 +2289,7 @@ SoundNodeMixer.Mixer=True
 SoundNodeDelay.Delay=True
 BoxSpawner_C.Default=True
 BoxChecker_C.Default=True
+BoxChecker_C.BoxBooleans=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2519,8 +2524,8 @@ ControlPanel_C=
 Pawn=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshActor=
-GameEnvironment_C="\"Object.LoopCounter\" "
-LevelScriptActor="\"Object.LoopCounter\" "
+GameEnvironment_C=
+LevelScriptActor=
 Cube_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.CustomPrimitiveData\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" "
 StaticMeshSocket="\"Object.RelativeLocation\" "
 Box_Bp_C=
@@ -2534,7 +2539,7 @@ Cube_C=
 TextRenderComponent="\"Object.Tags.ComponentTags\" "
 IORail2_IOconnectCylinders_001_Blueprint_C="\"Object.StaticMeshComponent\" "
 IORail2_IOconnectBox_001_Blueprint_C=
-BoxSpawner_C="\"Object.BoxColours\" "
+BoxSpawner_C=
 BoxChecker_C=
 
 [MaterialEditor]
@@ -2870,7 +2875,7 @@ BoxComponent=
 IORail2_IOconnectCylinders_001_Blueprint_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 IORail2_IOconnectBox_001_Blueprint_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 BoxSpawner_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-BoxChecker_C=
+BoxChecker_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 sprayTestBP_C=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
 [DetailMultiObjectNodeExpansion]
